# uaip

./: .editorconfig  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  config.yaml  example_amazon.py  example_declarative.py  example_simple.py  package-lock.json  pyproject.toml  requirements.txt  router.Dockerfile  server.py  test_state.py  ui.Dockerfile  ui.nginx.conf  worker.Dockerfile
.github/workflows/: lint.yml  tests.yml
clients/: client.py
concierge/: __init__.py  config.py
concierge/communications/: __init__.py  base.py  error.py  messages.py  stage.py  tool_result.py  transition_result.py
concierge/core/: __init__.py  construct.py  constructs.py  stage.py  state.py  state_manager.py  task.py  tool.py  workflow.py
concierge/engine/: language_engine.py  orchestrator.py
concierge/presentations/: brief.py  comprehensive.py
concierge/serving/: api.py
concierge/transports/: http.py
configs/: default.yaml
docs/: introduction.mdx  mint.json
examples/: __init__.py  simple_stock.py
examples/ecommerce/: __init__.py  workflow.py
examples/food_delivery/: __init__.py  workflow.py
examples/payment/: __init__.py  workflow.py
examples/ride_sharing/: __init__.py  workflow.py
examples/shop/: __init__.py  workflow.py
examples/travel_booking/: __init__.py  workflow.py
examples/zillow/: test_flow.py  workflow.py
examples/zillow/stages/: __init__.py  analytics.py  inspection.py  intelligence.py  negotiation.py  portfolio.py
scripts/: init-database.py  init-schema.sql  run-server.sh  start-router.sh  start-ui.sh  start-worker.sh
services/worker/: cli.py
spec/: protocol.md
src/concierge/: cli.py
src/concierge/core/: api_key_store.py  git_deployment_store.py  postgres_state_manager.py  registry.py  workflow.py
src/concierge/engine/: language_engine.py  orchestrator.py
src/concierge/protocols/: __init__.py  mcp_adapter.py
src/concierge/serving/: __init__.py  manager.py
src/concierge_clients/: client_tool_calling.py
src/concierge_clients/providers/: base.py  (+3 more)
src/openmcp/: pyproject.toml
tests/: test_integration_stock.py  test_orchestrator.py  test_provider_abstraction.py
ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/src/: App.tsx  config.ts  index.css
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  config.ts  index.css  main.tsx  vite-env.d.ts
(+34 files in other folders)
