[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "concierge_awi"
version = "0.1.1"
description = "Declarative framework for building Agentic AI Services"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "click>=8.0.0",
    "openai>=1.0.0",
]

[project.scripts]
concierge = "concierge.cli:cli"

[project.urls]
Homepage = "https://github.com/Agentic-Web-Interfaces/concierge"
Repository = "https://github.com/Agentic-Web-Interfaces/concierge"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["concierge", "concierge.core", "concierge.serving", "concierge.configs", "concierge_clients"]

[tool.setuptools.package-data]
"concierge.configs" = ["*.yaml"]
"concierge" = ["../../web/dist/**/*"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
