[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "concierge_awi"
version = "0.1.2"
description = "Declarative framework for building Agentic AI Services"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "click>=8.0.0",
    "openai>=1.0.0",
    "httpx>=0.25.0",
    "pyjwt>=2.8.0",
    "mcp>=1.0.0",
    "sentence-transformers>=2.0.0",
    "numpy>=1.24.0",
]

[project.scripts]
concierge = "concierge.cli:cli"

[project.urls]
Homepage = "https://github.com/Agentic-Web-Interfaces/concierge"
Repository = "https://github.com/Agentic-Web-Interfaces/concierge"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["concierge*", "services*", "openmcp*"]

[tool.setuptools.package-data]
"concierge" = ["../web/dist/**/*"]

